Fix liée au passage en java 8